--- a/index.html
+++ b/index.html
@@ -1,9 +1,249 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>YOBRO</title>
+<head><meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
+	<title>Welcome to theengineersthing.com</title>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="css.css" rel="stylesheet" type="text/css" /><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3417099309484707",
+    enable_page_level_ads: true
+  });
+</script><script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-90560770-1', 'auto');
+  ga('send', 'pageview');
+
+</script><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1>Brook</h1>
+<header class="container">
+<div class="row">
+<h2 class="col-sm-5">The Engineer&#39;s Thing</h2>
+
+<nav class="col-sm-7 ">
+<p><a href="index.html">Home</a></p>
+
+<p><a href="aboutus.html">About us</a></p>
+
+<p><a href="events.html">Events</a></p>
+
+<p><a href="articles.html">Articles</a></p>
+
+<p><a href="publishevents1.html">Publish your events</a></p>
+
+<p><a href="https://goo.gl/forms/K9KjMdClCwPdGZQi2">Feedback </a></p>
+</nav>
+</div>
+</header>
+
+<p></p>
+<style>
+.button {
+    background-color: #181818; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+.shivajitheboss:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),20px 25px 50px 50px #00FF00
+}
+</style>
+<p></p>
+
+<p></p>
+<br>
+<hr>
+<section class="container">
+<div class="row">
+<br>
+<br>
+
+<section class="jumbotron">
+<div class="container">
+<div class="row text-left">
+<div class="carousel slide" data-ride="carousel" id="myCarousel"><!-- Indicators -->
+<ol class="carousel-indicators">
+	<li class="active" data-slide-to="0" data-target="#myCarousel"></li>
+	<li data-slide-to="1" data-target="#myCarousel"></li>
+	<li data-slide-to="2" data-target="#myCarousel"></li>
+</ol>
+<!-- Wrapper for slides -->
+
+<div class="carousel-inner" role="listbox">
+<div class="item active"><img alt="nmte1" src="nmteposter2.jpg" />
+<div class="carousel-caption">
+<h3 style="color:black">ANAADYANTA 2K17</h3>
+
+<h4 style="color:black">COME,DIVE IN TO EXPERIENCE</h4>
+</div>
+</div>
+
+<div class="item"><img alt="snist" src="poster1.jpg" />
+<div class="carousel-caption">
+<h3 style="color:black">ADASTRA 2K17</h3>
+
+<h4 style="color: #FFC300 ">The flagship event of Sreenidhi Institute of Technology!</h4>
+</div>
+</div>
+
+<div class="item"><img alt="nmte" src="nmteposter3.jpg" />
+<div class="carousel-caption">
+<h3 style="color:black">ANAADYANTA 2K17</h3>
+
+<h4 style="color:black ">Come,Dive in to experience</h4>
+</div>
+</div>
+</div>
+<!-- Left and right controls --><a class="left carousel-control" data-slide="prev" href="#myCarousel" role="button"><span class="sr-only">Previous</span> </a> <a class="right carousel-control" data-slide="next" href="#myCarousel" role="button"> <span class="sr-only">Next</span> </a></div>
+</div>
+</div>
+</section>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<hr>
+<section class="container">
+<div class="row">
+<figure class="col-sm-12">
+<h2>The difference between the extra ordinary and the ordinary is that Little Extra..<br />
+-Jimmy Johnson</h2>
+<br />
+<br />
+&nbsp;
+<h3>Welcome! You have finally come to the right place after all the wait and search .. Explore and follow us to learn how to be THE LITTLE EXTRA<br />
+<br />
+Know more <a href="aboutus.html"> About Us </a></h3>
+</figure>
+</div>
+</section>
+
+<p></p>
+
+<p></p>
+
+<hr />
+<p></p>
+
+<p></p>
+
+<section class="container">
+<div class="row">
+<figure class="col-sm-6">
+<p>Code Club</p>
+<a href="codeclub.html"><img height="260px" src="codeclub1.jpg" /> </a></figure>
+
+<figure class="col-sm-6">
+<p>News and Notifications</p>
+<a href="newsandnotifications.html"><img height="260px" src="tips_sugg.jpg" /></a></figure>
+</div>
+
+<div class="row">
+<figure class="col-sm-6">
+<p>Post an article</p>
+<a href="articles.html"><img height="320px" src="post_atricle.jpg " /></a></figure>
+
+<figure class="col-sm-6">
+<p>Placement Experiences</p>
+<a href="placementexperiences.html"><img height="320px" src="placement_exp.png" /></a></figure>
+</div>
+</section>
+
+<hr>
+<footer class="container">
+<div class="row">
+<p color="white"><b>Hits</b>
+
+<script type="text/javascript" src="http://counter2.01counter.com/private/counter.js?c=3adf0b3577f328eccaa93306c7c2ccb4"></script><noscript><a href="http://www.freecounterstat.com" title="website counter"><img src="http://counter2.01counter.com/private/freecounterstat.php?c=3adf0b3577f328eccaa93306c7c2ccb4" border="0" title="website counter" alt="website counter"></a>
+</noscript></p>
+
+
+<p class="col-sm-8">Find us at:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspcontact@theengineersthing.com</p>
+
+</div>
+</footer>
+
 </body>
 </html>
